# Reveal

./: .gitignore  CMakeLists.txt  README.md
NewProject/: NewProject.jucer
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
